# agenda-digital

./: package-lock.json
backend/: .env  docker-compose.yml  dockerfile  fly.toml  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: b963e856f283_criação_tabela_clientes.py  c7068fd5906b_correção.py
backend/pgdata/: postmaster.pid
backend/pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
backend/pgdata/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  16389  16392  16394  16397  16399  2579  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2609  2609_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  (+21 more)
backend/pgdata/base/4/: 2619
backend/pgdata/base/5/: pg_internal.init
backend/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
backend/pgdata/pg_stat/: pgstat.stat
frontend/: package-lock.json  package.json  vite.config.ts
frontend/components/: ButtonAddClient.tsx  CardClient.tsx  CardStats.tsx  Profile.tsx  SearchBar.tsx
frontend/src/: App.tsx  index.css
frontend/src/assets/: iconUser.tsx
