[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["viniciusmth <viniciusmatheus40@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
