[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["viniciusmth <viniciusmatheus40@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
